--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="conteudo">
             <main>
                 <article class="produto">
-                    <img src="src/assets/relogio.jpg" alt=""/>
+                    <img src="./src/assets/relogio.jpg" alt=""/>
                     <h3>Relógio</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur</p>
                     <p class="preco">R$ 800,00</p>
@@ -35,7 +35,7 @@
                 </article>
 
                 <article class="produto">
-                    <img src="" alt=""/>
+                    <img src="./src/assets/wolverine.jpg" alt=""/>
                     <h3>Tenis 1</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur</p>
                     <p class="preco">R$ 800,00</p>
@@ -43,7 +43,7 @@
                 </article>
 
                 <article class="produto">
-                    <img src="" alt=""/>
+                    <img src="./src/assets/tenis2.webp" alt=""/>
                     <h3>Tenis 2</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur</p>
                     <p class="preco">R$ 800,00</p>
@@ -51,7 +51,7 @@
                 </article>
 
                 <article class="produto">
-                    <img src="" alt=""/>
+                    <img src="./src/assets/calça.jpg" alt=""/>
                     <h3>Calças erguidas</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur</p>
                     <p class="preco">R$ 800,00</p>
